<resources>
	<string name="app_name">University SOS</string>
	<string name="timetable">Timetable</string>
	<string name="settings">Settings</string>
	<string name="profile">Profile</string>
	<string name="visible_period">Visible period</string>
	<string name="number_of_visible_days">Number of visible days</string>
	<string name="login_title">Make studying easier</string>
	<string name="login_description">Log in into your USOS account\nand have all your grades, exams\nand much more right where you need it</string>
	<string name="pick_university">Pick university</string>
	<string name="search_for_university">Search for university</string>
	<string name="calendar">Calendar</string>
	<string name="mail">Mail</string>
	<string name="news">News</string>
	<string name="loading">Loading…</string>
	<string name="shortcuts">Shortcuts</string>
	<string name="grades">Grades</string>
	<string name="courses">Courses</string>
	<string name="surveys">Surveys</string>
	<string name="terms">Terms</string>
	<string name="avg">avg:</string>
	<string name="empty">(empty)</string>
	<string name="group_number">Group %d</string>
	<string name="group_instructors">Group instructors</string>
	<string name="course">Course</string>
	<string name="incoming_meetings">Incoming meetings</string>
	<string name="add_to_calendar">Add to calendar</string>
	<string name="participants">Participants</string>
	<string name="amt">amt:</string>
	<string name="course_info">%s, group %d</string>
	<string name="no_incoming_meetings">There are no incoming meetings</string>
	<string name="no_new_articles">There are no new articles</string>
	<string name="time_period" translatable="false">%tR - %tR</string>
	<string name="calendar_event_description">Incoming university event</string>
	<string name="create_event_title">Add this event to the calendar</string>
	<string name="no_surveys_to_fill">There are no surveys to fill out</string>
	<string name="last_week">Last week</string>
	<string name="older">Older</string>
	<string name="article">Article</string>
	<string name="room">Room</string>
	<string name="attributes">Attributes</string>
	<string name="capacity">Capacity</string>
	<string name="building_location">Building location</string>
	<string name="available">Available</string>
	<string name="email_content">Email content</string>
	<string name="recipient">Recipient</string>
	<string name="attachments">Attachments</string>
	<string name="recipients">Recipients</string>
	<string name="type_to_search">Type to search</string>
	<string name="subject">Subject</string>
	<string name="some_topic">Topic to discuss</string>
	<string name="some_content">Your very important email</string>
	<string name="recent_grades">Recent grades</string>
	<string name="no_recent_grades">There are no recent grades</string>
	<string name="show_more">Show more</string>
	<string name="show_less">Show less</string>
	<string name="building">Building</string>
	<string name="phone_numbers">Phone numbers</string>
	<string name="rooms">Rooms</string>
	<string name="no_phone_numbers">There are no phone numbers</string>
	<string name="no_rooms">There are no rooms</string>
	<string name="description">Description</string>
	<string name="learning_outcomes">Learning outcomes</string>
	<string name="assessment_criteria">Assessment criteria</string>
	<string name="user">User</string>
	<string name="office_hours">Office hours</string>
	<string name="interests">Interests</string>
	<string name="employment_functions">Employment functions</string>
	<string name="email">Email</string>
	<string name="function">Function:</string>
	<string name="faculty">Faculty:</string>
	<string name="no_employment_functions">There are not employment functions</string>
	<string name="no_instructors">There are no instructors</string>
	<string name="discard">Discard</string>
	<string name="save_draft">Save draft</string>
	<string name="discard_message">All your content will be erased and you won\'t be able to come back to it.</string>
	<string name="discard_title">Do you want to discard all changes?</string>
	<string name="academic_calendar">Academic calendar</string>
	<string name="events">Events</string>
	<string name="date_period" translatable="false">%1$td.%1$tm.%1$tY - %2$td.%2$tm.%2$tY</string>
	<string name="day_off">Day off</string>
	<string name="mon">Mon</string>
	<string name="tue">Tue</string>
	<string name="wed">Wed</string>
	<string name="thu">Thu</string>
	<string name="fri">Fri</string>
	<string name="sat">Sat</string>
	<string name="sun">Sun</string>
	<string name="visible_period_description">Indicates how many hours will be visible</string>
	<string name="snap_to_a_full_day">Snap to a full day</string>
	<string name="snap_to_a_full_day_description">Scrolls to a full visible day when you let go your finger</string>
	<string name="off">off</string>
	<string name="add_an_event">Add an event</string>
	<string name="add_an_event_description">After taping on an empty space show dialog to create a new event</string>
	<string name="on">on</string>
	<string name="notifications">Notifications</string>
	<string name="enable_notifications">Enable notifications</string>
	<string name="enable_notifications_description">Show all push notifications</string>
	<string name="grades_notifications">Grades notifications</string>
	<string name="grades_notifications_description">Show notification when a grade is updated or created</string>
	<string name="news_notifications">News notifications</string>
	<string name="news_notifications_description">Show notification when an article was posted</string>
	<string name="surveys_notifications">Surveys notifications</string>
	<string name="surveys_notifications_description">Show notification when a new survey appeared</string>
	<string name="system" translatable="false">System</string>
	<string name="dark_mode">Dark mode</string>
	<string name="dark_mode_description">Discover the dark side of the app! Requires restart.</string>
	<string name="default_tab">Default tab</string>
	<string name="default_tab_description">Select which tab should be open at startup</string>
	<string name="default_language">Default language</string>
	<string name="default_language_description">Indicates the language in which the data will be downloaded. Requires restart.</string>
	<string name="pl" translatable="false">PL</string>
	<string name="logout">Logout</string>
	<string name="logout_description">Remove all cached data and logout from your USOS account</string>
	<string name="number_of_visible_days_description">Indicates how many days should be visible at once</string>
	<string name="en" translatable="false">EN</string>
	<string name="confirm">Confirm</string>
	<string name="cancel">Cancel</string>
	<string name="select_visible_period">Select visible period</string>
	<string name="default_tab_title">Select a default tab</string>
	<string name="number_of_visible_days_title">How many days should be visible?</string>
	<string name="default_notification_channel_id" translatable="false">all_notifications</string>
	<string name="default_notification_channel">All notifications</string>
	<string name="add_an_attachment">Add an attachment</string>
	<string name="tap_to_add">Tap to add</string>
	<string name="choose_an_attachment">Choose an attachment</string>
	<string name="no_emails">There are no emails</string>
	<string name="no_universities">There are no universities</string>
	<string name="no_courses">There are no courses</string>
	<string name="no_grades">There are no grades</string>
	<string name="event_download_error">Something went wrong while downloading this event</string>
	<string name="january">January</string>
	<string name="february">February</string>
	<string name="march">March</string>
	<string name="april">April</string>
	<string name="may">May</string>
	<string name="june">June</string>
	<string name="july">July</string>
	<string name="august">August</string>
	<string name="september">September</string>
	<string name="october">October</string>
	<string name="november">November</string>
	<string name="december">December</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="date" translatable="false">%1$td.%1$tm.%1$tY</string>
	<string name="to_fill_out">To fill out</string>
	<string name="filled_out">Filled out</string>
	<string name="course_info_general" translatable="false">%s (%s)</string>
	<string name="survey">Survey</string>
	<string name="send_survey">Send survey</string>
	<string name="some_comment">Your very important comment</string>
	<string name="your_comment">Your comment</string>
	<string name="complete_all_answers">Complete all the answers</string>
	<string name="complete_all_answers_description">It is advised to answer all the questions. Press OK to continue anyway</string>
	<string name="all_done">All done</string>
	<string name="thank_you_fill_survey">Thank you for filling out the survey</string>
	<string name="oops" translatable="false">Oops</string>
	<string name="something_went_wrong">Something went wrong. Please try again later. It could be caused by your internet connection</string>
	<string name="too_large_file">The file is too large. Please try again with a different file</string>
	<string name="edit_the_attachment">Edit the attachment</string>
	<string name="attachment_name">Attachment name</string>
	<string name="save">Save</string>
	<string name="remove">Remove</string>
	<string name="no_recipient">(no recipient)</string>
	<string name="no_subject">(no subject)</string>
	<string name="saving_survey">Saving the survey</string>
	<string name="saving_email">Saving the email</string>
	<string name="delete_email_description">Do you want to remove this email? You won\'t be able to recover it</string>
	<string name="sending_email">Sending the email</string>
	<string name="sending_email_error_description">There\'s been a problem. Make sure the email has non empty subject, list of recipients and content</string>
	<string name="grade_notification_channel">Grades notifications</string>
	<string name="grade_notification_channel_id" translatable="false">grades_notifications</string>
	<string name="survey_notification_channel">Surveys notifications</string>
	<string name="survey_notification_channel_id" translatable="false">surveys_notifications</string>
	<string name="article_notification_channel">Articles notifications</string>
	<string name="article_notification_channel_id" translatable="false">articles_notifications</string>
	<string name="usos_notification_title">USOS notification</string>
	<string name="you_have_new_grade">You have a new grade!</string>
	<string name="widget_configuration">Widget configuration</string>
	<string name="number_of_visible_hours_before">Number of visible hours before now</string>
	<string name="number_of_visible_hours_after">Number of visible hours after now</string>
	<string name="number_of_visible_hours_before_description">Indicates how many hours back will be visible</string>
	<string name="number_of_visible_hours_after_description">Indicates how many hours ahead will be visible</string>
	<string name="widget_customization">Widget customization</string>
	<string name="future_background_color">Future background color</string>
	<string name="past_background_color">Past background color</string>
	<string name="weekends_background_color">Weekends background color</string>
	<string name="now_line_color">Now line color</string>
	<string name="today_header_text_color">Today header text color</string>
	<string name="header_text_color">Header text color</string>
	<string name="header_background_color">Header background color</string>
	<string name="divider_line_color">Divider line color</string>
	<string name="transparency">Transparency</string>
	<string name="transparency_description">Indicates how transparent the widget will be</string>
	<string name="reset_widget_settings">Reset widget settings</string>
</resources>