<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?colorBackground">

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/imageWidget"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:elevation="1dp"
		android:scaleType="centerInside"
		android:src="@drawable/ic_widget_preview"
		app:layout_constraintDimensionRatio="1.5"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/imageWidget">

		<androidx.appcompat.widget.LinearLayoutCompat
			android:id="@+id/containerSettings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:paddingBottom="100dp">

			<com.pointlessapps.mobileusos.views.SettingsItemGroup
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:header="@string/widget_configuration">

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemVisibleDays"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:description="@string/number_of_visible_days_description"
					app:title="@string/number_of_visible_days" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemVisibleHoursBefore"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:description="@string/number_of_visible_hours_before_description"
					app:title="@string/number_of_visible_hours_before" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemVisibleHoursAfter"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:description="@string/number_of_visible_hours_after_description"
					app:title="@string/number_of_visible_hours_after" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemTransparency"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:description="@string/transparency_description"
					app:hasSeparator="false"
					app:title="@string/transparency" />

			</com.pointlessapps.mobileusos.views.SettingsItemGroup>

			<com.pointlessapps.mobileusos.views.SettingsItemGroup
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:header="@string/widget_customization">

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemFutureBackgroundColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/future_background_color"
					app:valueColor="?weekViewHeaderBackgroundColor" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemPastBackgroundColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/past_background_color"
					app:valueColor="?weekViewPastBackgroundColor" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemWeekendBackgroundColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/weekends_background_color"
					app:valueColor="?weekViewWeekendBackgroundColor" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemNowLineColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/now_line_color"
					app:valueColor="@color/colorAccent" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemTodayHeaderTextColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/today_header_text_color"
					app:valueColor="@color/colorAccent" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemHeaderTextColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/header_text_color"
					app:valueColor="?weekViewHeaderTextColor" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemHeaderBackgroundColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/header_background_color"
					app:valueColor="?weekViewHeaderBackgroundColor" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemDividerLineColor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasValueBorder="true"
					app:title="@string/divider_line_color"
					app:valueColor="?weekViewDividerLineColor" />

				<com.pointlessapps.mobileusos.views.SettingsItem
					android:id="@+id/itemResetSettings"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:hasSeparator="false"
					app:hasValue="false"
					app:title="@string/reset_widget_settings" />

			</com.pointlessapps.mobileusos.views.SettingsItemGroup>

		</androidx.appcompat.widget.LinearLayoutCompat>

	</androidx.core.widget.NestedScrollView>

	<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
		android:id="@+id/buttonSave"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="30dp"
		android:gravity="center"
		android:minWidth="0dp"
		android:text="@string/save"
		android:textAlignment="gravity"
		android:textColor="@color/white"
		app:backgroundTint="@color/colorAccent"
		app:icon="@drawable/ic_done"
		app:iconPadding="5dp"
		app:iconTint="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>