<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?colorBackground"
	android:orientation="vertical">

	<androidx.appcompat.widget.LinearLayoutCompat
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?white"
			android:elevation="2dp"
			android:paddingLeft="20dp"
			android:paddingTop="10dp"
			android:paddingRight="20dp"
			android:paddingBottom="10dp">

			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/montserrat_bold"
				android:text="@string/email_content"
				android:textColor="?colorTextPrimary"
				android:textSize="18sp" />

		</androidx.appcompat.widget.LinearLayoutCompat>

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:clipChildren="false"
				android:clipToPadding="false"
				android:orientation="vertical"
				android:paddingLeft="20dp"
				android:paddingTop="20dp"
				android:paddingRight="20dp"
				android:paddingBottom="100dp">

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/montserrat"
					android:text="@string/recipients"
					android:textColor="?colorTextPrimary"
					android:textSize="14sp" />

				<com.google.android.flexbox.FlexboxLayout
					android:id="@+id/listRecipients"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:background="@drawable/background_rounded"
					android:backgroundTint="?white"
					android:padding="10dp"
					app:alignContent="space_around"
					app:alignItems="stretch"
					app:dividerDrawable="@drawable/divider"
					app:flexWrap="wrap"
					app:showDivider="middle">

					<androidx.appcompat.widget.AppCompatAutoCompleteTextView
						android:id="@+id/inputRecipients"
						style="@style/Widget.AppCompat.EditText"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@android:color/transparent"
						android:fontFamily="@font/montserrat"
						android:hint="@string/type_to_search"
						android:popupBackground="?colorBackground"
						android:textColor="?colorTextPrimary"
						android:dropDownAnchor="@id/listRecipients"
						android:inputType="textAutoComplete|textEmailAddress|textCapWords"
						android:textColorHint="?colorTextSecondary"
						android:textSize="14sp"
						app:layout_flexGrow="1" />

				</com.google.android.flexbox.FlexboxLayout>

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:fontFamily="@font/montserrat"
					android:text="@string/subject"
					android:textColor="?colorTextPrimary"
					android:textSize="14sp" />

				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputSubject"
					style="@style/Widget.AppCompat.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:background="@drawable/background_rounded"
					android:backgroundTint="?white"
					android:fontFamily="@font/montserrat"
					android:hint="@string/some_topic"
					android:padding="10dp"
					android:textColor="?colorTextPrimary"
					android:textColorHint="?colorTextSecondary"
					android:textSize="14sp" />

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:fontFamily="@font/montserrat"
					android:text="@string/email_content"
					android:textColor="?colorTextPrimary"
					android:textSize="14sp" />

				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputContent"
					style="@style/Widget.AppCompat.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:background="@drawable/background_rounded"
					android:backgroundTint="?white"
					android:fontFamily="@font/montserrat"
					android:gravity="top"
					android:hint="@string/some_content"
					android:minHeight="300dp"
					android:padding="10dp"
					android:textColor="?colorTextPrimary"
					android:textColorHint="?colorTextSecondary"
					android:textSize="14sp" />

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:fontFamily="@font/montserrat"
					android:text="@string/attachments"
					android:textColor="?colorTextPrimary"
					android:textSize="14sp" />

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/listAttachments"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					tools:itemCount="1"
					tools:listitem="@layout/list_item_email_attachment" />

			</androidx.appcompat.widget.LinearLayoutCompat>

		</androidx.core.widget.NestedScrollView>

	</androidx.appcompat.widget.LinearLayoutCompat>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/buttonSend"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:backgroundTint="@color/colorAccent"
		android:src="@drawable/ic_send"
		app:borderWidth="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:tint="?white" />

</androidx.constraintlayout.widget.ConstraintLayout>
