<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/background_rounded"
	android:backgroundTint="?white"
	android:padding="20dp">

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/messageMain"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/montserrat_bold"
		android:gravity="center"
		android:text="@string/discard_title"
		android:textAlignment="center"
		android:textColor="?colorTextPrimary"
		android:textSize="18sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/messageSecondary"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:fontFamily="@font/montserrat"
		android:gravity="center"
		android:text="@string/discard_message"
		android:textAlignment="center"
		android:textColor="?colorTextPrimary"
		android:textSize="14sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/messageMain" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/buttonPrimary"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:fontFamily="@font/montserrat_bold"
		android:insetTop="0dp"
		android:insetBottom="0dp"
		android:letterSpacing="0"
		android:minWidth="0dp"
		android:minHeight="0dp"
		android:paddingLeft="10dp"
		android:paddingTop="5dp"
		android:paddingRight="10dp"
		android:paddingBottom="5dp"
		android:text="@string/discard"
		android:textAllCaps="false"
		android:textColor="@color/colorAccent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/messageSecondary" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/buttonSecondary"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="20dp"
		android:layout_marginRight="10dp"
		android:fontFamily="@font/montserrat"
		android:insetTop="0dp"
		android:insetBottom="0dp"
		android:letterSpacing="0"
		android:minWidth="0dp"
		android:minHeight="0dp"
		android:paddingLeft="10dp"
		android:paddingTop="5dp"
		android:paddingRight="10dp"
		android:paddingBottom="5dp"
		android:text="@string/save_draft"
		android:textAllCaps="false"
		android:textColor="?colorTextPrimary"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toLeftOf="@id/buttonPrimary"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/messageSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>
